[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kriti-d <kriti.dogra@snyk.io>"]

[tool.poetry.dependencies]
python = "^2.7"
python-docx = "0.8.3"
"oslo.utils" = "1.4.0"


[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
